# neurax-backend

./: README.md  main.py  pyproject.toml  start_servers.ps1
.taskmaster/: config.json
.taskmaster/tasks/: tasks.json
aryaman/: prompt.txt
aryaman/output/: agents.yaml  crew.py  main.py  tasks.yaml
crewai_project/: .dockerignore  Dockerfile  README.md  pyproject.toml
crewai_project/output/: authentication_layer.py  core_api.py  data_ingestion_preprocessing.py  database_schema.py  neurax_core.py  nn_architecture.py  project_infrastructure_config.py  project_initialization.py
crewai_project/src/crewai_project/: crew.py  main.py
crewai_project/src/crewai_project/config/: tasks.yaml
routes/: generate_crew.py  parse_prd.py  parse_resume.py  run_crew.py
services/: crew_generator.py  crew_runner.py  prd_parser.py  resume_parser.py
tests/: prd.txt  taskmaster.py
tmp/: prd_eee4eafc764743b6b221ef4bfafe1be5.txt
tmp/resumes/: ADITYA_SURESH.json  Aryan_Thakur.json  HARSH_RAJ.json
