[project]
name = "neurax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.10.1",
    "fastapi>=0.135.1",
    "langchain-anthropic>=1.3.5",
    "langchain-core>=1.2.19",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "pypdf>=6.8.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]
